/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package mobileharness.shared.version;

import "src/devtools/mobileharness/shared/version/proto/version.proto";

option java_package = "com.google.devtools.mobileharness.shared.version.proto";
option java_outer_classname = "VersionServiceProto";

message GetVersionRequest {}

message GetVersionResponse {
  // Required.
  //
  // A serialized MH version like 2.34.5
  // (com.google.wireless.qa.mobileharness.shared.version.Version.toString()).
  //
  // Deprecated. Use versions instead.
  string version = 1;

  // Optional.
  //
  // GitHub commit ID from which the server was built, if any.
  //
  // Deprecated. Use versions instead.
  string github_version = 2;

  // Required.
  //
  // Version information of the server.
  //
  // Since MH lab 4.320.0.
  Versions versions = 3;
}

service VersionService {
  // Gets version of a MH component.
  rpc GetVersion(GetVersionRequest) returns (GetVersionResponse) {}
}
